Update the html

--- a/index.html
+++ b/index.html
@@ -10,3 +10,12 @@
   <link href="css/main.css" rel="stylesheet">
 </head>
 <body>
+  <header>
+    <div class="rel">
+      <div class="imgcontainer">
+        <img class="img-flex" src="images/earth-horizon.jpg" alt="Earth" role="presentation">
+      </div>
+
+
+</body>
+</html>
