--- a/index.html
+++ b/index.html
@@ -15,7 +15,12 @@
       <div class="imgcontainer">
         <img class="img-flex" src="images/earth-horizon.jpg" alt="Earth" role="presentation">
       </div>
-
+      <div class="textcontainer">
+        <div class="grid grid-middle wrapper gutter-1-2">
+          <div class="unit xs-1 s-1 m-1-2 l-1-2 pad-t">
+            <h1 class="yotta push-1-2">The Planet Earth</h1>
+            <p class="push-1-2">An amazingly species rich, varied climate planet, the third, and only habitable, planet in the Solar System, located about 25 000 ly from the Galactic Centre.</p>
+          </div>
 
 </body>
 </html>
