--- a/index.html
+++ b/index.html
@@ -21,6 +21,12 @@
             <h1 class="yotta push-1-2">The Planet Earth</h1>
             <p class="push-1-2">An amazingly species rich, varied climate planet, the third, and only habitable, planet in the Solar System, located about 25 000 ly from the Galactic Centre.</p>
           </div>
-
+          <div class="unit xs-1 s-1 m-1-2 l-1-2 unit-content-center-horizontal">
+            <a class="btn btn-ghost push bold" href="#">Book a star cruise</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </header>
 </body>
 </html>
